--- a/styles.css
+++ b/styles.css
@@ -278,10 +278,16 @@ background-color: red;
 }
 .padrefe {
 	width: 98%;
-	background-color: white;
+	background-color: transparent;
 	margin-top: -30%;
 	padding-bottom: 3%;
 	display: none;
 	transition: 2s;
 	opacity: 0%;
+}
+.pruebita {
+	border: solid darkred 1px;
+	border-spacing: 0;
+	box-shadow: 0px 0px 5px 5px;
+	border-radius: 5px;
 }
