--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 .bodyy {
 	margin: 15px;
 	background-image: url("https://www.xtrafondos.com/wallpapers/fuegos-artificiales-de-colores-11326.jpg");
-	padding-bottom: 35px;
+	padding-bottom: 40%;
 }
 .encabezado {
 	font-family: Arial;
