--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,8 @@
 
 }
 .bodyy {
-	margin: 15px;
+	margin: 15px 15px 100px 15px;
 	background-image: url("https://www.xtrafondos.com/wallpapers/fuegos-artificiales-de-colores-11326.jpg");
-	padding-bottom: 40%;
 }
 .encabezado {
 	font-family: Arial;
