--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ margin: auto;
 	color: white;
     position: fixed;
     min-height: 72px;
-    width: 63px;
+    width: 67px;
     text-align: center;
     word-wrap: break-word;
     background-color: red;
@@ -204,6 +204,9 @@ margin: auto;
     border-radius: 5px;
     margin-left: 0.2em;
     margin-top: 2%;
+}
+.my-fixed-item3:active {
+	box-shadow: 0px 0px 5px 5px darkred;
 }
 .my-fixed-item2:active {
 	box-shadow: 0px 0px 5px 5px darkred;
